# rust-axum-web-template

./: .gitignore  Makefile  README.md
LLM.servers/: llama.cpp.sh  vllm.sh
Python.Examples/Agent/: requirements.txt
Python.Examples/RAG/: rag_search_text_from_database.py  requirements.txt
RAG/: database.sql
Server.RAG/: llama.cpp.embedding.sh  rag_add_to_database.py
app/: Cargo.toml  config.json.sample
app/SQL/: counter_insert.sql  counter_select.sql
app/SQL/auth/users/: change_password.sql  insert_query.sql  select_base.sql
app/libraries/adk_session_manager/: Cargo.toml
app/libraries/adk_session_manager/src/: lib.rs
app/libraries/adk_utils/: Cargo.toml
app/libraries/adk_utils/src/: content.rs  lib.rs
app/libraries/adk_utils/src/session/: mod.rs  tools.rs
app/libraries/agent/: Cargo.toml
app/libraries/agent/src/: builder.rs  runner.rs
app/libraries/app_state/: Cargo.toml
app/libraries/app_state/src/: lib.rs
app/libraries/config/: Cargo.toml
app/libraries/config/src/: lib.rs
app/libraries/cryptography/: Cargo.toml
app/libraries/cryptography/src/: base64.rs  hash.rs  jwt.rs  rsa.rs
app/libraries/dto/: Cargo.toml
app/libraries/dto/src/: lib.rs  rag.rs
app/libraries/dto/src/auth/: login.rs  user.rs
app/libraries/dto/src/customer/: credit_score.rs  customer_information.rs  mod.rs  risk.rs
app/libraries/error/: Cargo.toml
app/libraries/error/src/: lib.rs
app/libraries/llama_cpp/: Cargo.toml
app/libraries/llama_cpp/src/: chat.rs  embedding.rs  lib.rs
app/libraries/log/: Cargo.toml
app/libraries/log/src/: lib.rs
app/libraries/middleware/: Cargo.toml
app/libraries/middleware/src/: lib.rs
app/libraries/redis/: Cargo.toml
app/libraries/redis/src/: lib.rs
app/libraries/route/: Cargo.toml
app/libraries/schema/: Cargo.toml
app/libraries/schema/src/: customer.rs  lib.rs
app/libraries/schema/src/auth/: kb.rs  users.rs
app/libraries/schema/src/tools/: counter.rs
app/libraries/tools/: Cargo.toml
app/libraries/tools/src/: calculator.rs  counter.rs  customer.rs  lib.rs  rag.rs  users.rs
app/mcp_contents/: test_content.txt
app/migrations/: 20251222005107_users.down.sql  20251222005107_users.up.sql  20260224011526_customer.down.sql  20260224011526_customer.up.sql  20260224011534_rag.down.sql  20260224011534_rag.up.sql  20260224211734_counter.down.sql  20260224211734_counter.up.sql
app/services/agent_cli/: Cargo.toml
app/services/agent_cli/src/: main.rs
app/services/app/: Cargo.toml
app/services/app/src/: lib.rs  main.rs  routings.rs
app/services/app/src/handlers/: index.rs  login.rs  user.rs
app/services/mcp/: Cargo.toml
app/services/mcp/src/: handlers.rs  lib.rs  main.rs  routings.rs
app/services/web/: Cargo.toml
app/services/web/src/: lib.rs  main.rs  routings.rs
app/services/web/src/handlers/: agent.rs  customer.rs  google.rs  index.rs  knowledge_based.rs  login.rs  mod.rs  user.rs
app/services/web/templates/: agent.html  customer.html  index.html  kb.html  login.html
python_agent_client/: agent_InMemorySaver.py  agent_PostgreSQL.py  requirements.txt
