[workspace]
resolver = "2"
members = [
  "libraries/app_state",
  "libraries/config",
  "libraries/cryptography",
  "libraries/error",
  "libraries/log",
  "libraries/middleware",
  "libraries/redis",
  "libraries/route",
  "libraries/schema",
  "services/app",  
]

[workspace.package]
version = "0.1.0"
edition = "2024"

[workspace.dependencies]
awc = "3.8.0"
anyhow = "1.0"
log = "0.4.27"
tower = "0.5.2"
hyper = "1.7.0"
dotenv = "0.15.0"
tracing = "0.1.44"
sqlx-core = "0.8.6"
mcp-macros = "0.12.0"
env_logger = "0.11.8"
rust_decimal = "1.38.0"
http-body-util = "0.1.3"
futures = { version = "0.3" }
tokio-util = { version = "0.7" }
serde_json = { version = "1.0" }
async-trait = { version = "0.1" }
tokio = { version = "1.4", features = ["full"] }
axum = { version = "0.8.8", features = ["macros"] }
chrono = {version ="0.4.41", features = ["serde"] }
uuid = { version = "1", features = ["serde", "v4"] }
bigdecimal = { version = "0.4", features = ["serde"] }
hyper-util = { version = "0.1.19", features = ["server"] }
postgres-types = { version = "0.2.9", features = ["derive"] }
schemars = { version = "1.0", features = ["derive", "uuid1"] }
tower-http = { version = "0.6.8", features = ["cors", "trace"] }
reqwest = { version = "0.12", features = ["json", "native-tls"] }
serde = {  version = "1.0", features = ["derive", "serde_derive"] }
sqlx = { version = "0.8.6", features = [ "runtime-tokio", "tls-native-tls", "postgres", "macros", "chrono", "uuid" ] }
tracing-subscriber = { version = "0.3.22", features = [ "env-filter", "std", "fmt", ] }

# Internal Libraries
app_config = { path = "./libraries/config", package = "config" }
app_cryptography = { path = "./libraries/config", package = "cryptography" }
app_error = { path = "./libraries/config", package = "error" }
app_log = { path = "./libraries/log", package = "log" }
app_state = { path = "./libraries/app_state", package = "app_state" }
app_middleware = { path = "./libraries/middleware", package = "middleware" }
app_redis = { path = "./libraries/redis", package = "redis" }
app_route = { path = "./libraries/route", package = "route" }
app_schema = { path = "./libraries/schema", package = "schema" }
