[package]
name = "adk_utils"
version.workspace = true
edition.workspace = true

[dependencies]
sqlx = { workspace = true }
uuid  = { workspace = true } 
serde  = { workspace = true }
chrono  = { workspace = true }
adk-core  =  { workspace = true }
adk-rust   = { workspace = true }
serde_json  = { workspace = true }
adk-session = { workspace = true }
async-trait =  { workspace = true }
