[package]
name = "middleware"
version.workspace = true
edition.workspace = true

[dependencies]
axum = { workspace = true }
serde = { workspace = true }
chrono = { workspace = true }
tracing = { workspace = true }
app_state = { workspace = true }
app_redis = { workspace = true }
serde_json = { workspace = true }
jsonwebtoken = { workspace = true }
app_cryptography = { workspace = true }
