[package]
name = "agent_cli"
version.workspace = true
edition.workspace = true

[dependencies]
tokio = { workspace = true }
anyhow = { workspace = true }
dotenv = { workspace = true }
rmcp09 = { workspace = true }
futures = { workspace = true }
reqwest = { workspace = true }
adk-agent = { workspace = true }
adk-tool  = { workspace = true }
adk-core  = { workspace = true }
adk-cli   = { workspace = true }
adk-model = { workspace = true }
adk-rust  = { workspace = true }
adk-runner = { workspace = true }
app_config = { workspace = true }
serde_json = { workspace = true }
async-trait = { workspace = true }
adk-session = { workspace = true }
adk-artifact = { workspace = true }
