[package]
name = "web"
version.workspace = true
edition.workspace = true

[dependencies]
awc = { workspace = true }
axum = { workspace = true }
sqlx = { workspace = true }
rand = { workspace = true }
tokio = { workspace = true }
serde = { workspace = true }
hyper = { workspace = true }
tower = { workspace = true }
chrono = { workspace = true }
dotenv = { workspace = true }
anyhow = { workspace = true }
askama = { workspace = true }
futures = { workspace = true }
reqwest = { workspace = true }
tracing = { workspace = true }
app_log = { workspace = true }
app_dto = { workspace = true }
app_error = { workspace = true }
app_state = { workspace = true }
app_schema = { workspace = true }
app_redis = { workspace = true }
tower-http = { workspace = true }
app_config = { workspace = true }
serde_json = { workspace = true }
hyper-util = { workspace = true }
tokio-util = { workspace = true }
async-trait = { workspace = true }
app_middleware = { workspace = true }
http-body-util = { workspace = true }
app_cryptography = { workspace = true }
tracing-subscriber = { workspace = true }
adk-rust = { workspace = true }
adk-core = { workspace = true }
uuid = { workspace = true }
